firmware-nonfree (0.22) UNRELEASED; urgency=low

  [ maximilian attems ]
  * Add iwlwifi-1000-3.ucode.
  * Add iwlwifi-6000-4.ucode.
  
  [ Ben Hutchings ]
  * Update Radeon firmware for use with Linux 2.6.32 (Closes: #558023)
  * Change URI for firmware-linux-nonfree to refer to David Woodhouse's
    linux-firmware.git repository (Closes: #558033)

 -- maximilian attems <maks@debian.org>  Thu, 12 Nov 2009 11:38:02 +0200

firmware-nonfree (0.21) unstable; urgency=low

  * Update to linux-support-2.6.31-1.
  * Upload to unstable.

 -- Ben Hutchings <ben@decadent.org.uk>  Sun, 25 Oct 2009 18:44:41 +0000

firmware-nonfree (0.20) experimental; urgency=low

  [ Ben Hutchings ]
  * firmware-linux-nonfree Replaces and Conflicts with old firmware-linux
    (Closes: #551146)
  * Update upstream URL for firmware-ralink (Closes: #551975)
  * Add AdvanSys SCSI controller firmware for use with advansys driver
    (Closes: #535922)
  * Add firmware-intelwimax package, initially containing Intel WiMAX
    Connection 2400 USB firmware for use with i2400m-usb driver
    (Closes: #550917)
  * Update description of firmware-bnx2 contents, thanks to
    Geoff Simmons <gsimmons@gsimmons.org> (Closes: #536050)
  * Include module/driver names in descriptions of all specific packages
    (Closes: #510220)

 -- Bastian Blank <waldi@debian.org>  Sat, 24 Oct 2009 22:16:37 +0200

firmware-nonfree (0.19) experimental; urgency=low

  [ dann frazier ]
  * Correct 'Homepage' control data for firmware-bnx2 and firmware-bnx2x
    (closes: #546899)

  [ Ben Hutchings ]
  * Make firmware-linux a metapackage and move previous contents to
    firmware-linux-nonfree
  * Add Agere/Prism/Symbol Orinoco firmware for use with orinoco driver
  * Add Xceive 5000 tuner firmware for use with xc5000 driver
  * Add DiBcom dib0700 USB DVB bridge firmware for use with
    dvb-usb-dib0700 driver
  * Update linux-support build-dep to 2.6.31-trunk
